--- a/eCom-master/core/templates/core/base.html
+++ b/eCom-master/core/templates/core/base.html
@@ -9,15 +9,22 @@
   </head>
   <body>
 
-    <nav class="px-8 py-4 flex justify-between items-center border-b border-gray-200">
-      <a href="/" class="text-xl font-semibold">eCom</a>
+    <nav class="px-8 py-4 flex justify-between items-center border-b bg-blue-50 border-blue-500">
       <div class="space-x-6">
-        <a href="{% url 'item:browse' %}" class="text-lg font-semibold hover:text-gray-500">Browse</a>
+        <a href="/" class="text-lg font-semibold hover:text-gray-500">Home</a>
         {% if request.user.is_authenticated %}
-        <a href="{% url 'item:newitem' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a>
-        <a href="#" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
-        <a href="{% url 'dashboard:dashboard' %}" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
+        <a href="{% url 'item:browse' %}" class="text-lg font-semibold hover:text-gray-500">Find</a>
+        <a href="{% url 'item:newitem' %}" class="text-lg font-semibold hover:text-gray-500">Sell</a>
+        {% endif %}
+      </div>
+      <div class="space-x-6">
+        <a href="/" class="text-xl text-center text-red-500 font-bold">Sneaker Complex</a>
+      </div>
+      <div class="space-x-6">
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'dashboard:dashboard' %}" class="text-lg font-semibold hover:text-gray-500">Notifications</a>
         <a href="{% url 'core:logout' %}" class="text-lg font-semibold hover:text-gray-500">Logout</a>
+        
         {% else %}
         <a href="{% url 'core:login' %}" class="text-lg font-semibold hover:text-gray-500">Login</a>
         {% endif %}
@@ -29,21 +36,19 @@
       {% endblock content %}
     </div>
 
-    <footer class="px-6 py-6 flex justify-between bg-gray-800">
-      <div class="w-2/3 pr-10">
-        <h3 class="mb-5 font-semibold text-gray-400">About</h3>
-        <p class="text-lg text-gray-500">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    <footer class="px-6 py-6 flex justify-between bg-blue-50 border-b border-blue-500" >
+      <div class="w-2/3 pr-5">
+        <p class="text-lg text-slate-500">The online complex with all your favourite sneakers!</p>
       </div>
 
       <div class="w-1/3 pr-10">
-        <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
         <ul class="space-y-2">
-          <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-          <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Policy</a></li>
-          <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
-          <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Term of use</a></li>
+          <li><a href="#" class="text-lg text-black hover:text-slate-700">About</a></li>
+          <li><a href="{% url 'core:contact' %}" class="text-lg text-black hover:text-slate-700">Contact</a></li>
+          <li><a href="#" class="text-lg text-black hover:text-slate-700">Terms of use</a></li>
         </ul>
       </div>
+      
     </footer>
   </body>
 </html>
