--- a/eCom-master/item/templates/item/browse.html
+++ b/eCom-master/item/templates/item/browse.html
@@ -4,16 +4,16 @@
 
 {% block content %}
 
-    <div class="p-6 grid grid-cols-4 gap-4 bg-gray-100 rounded-xl">
-        <div class="col-span-1">
+    <div class="p-6 grid gap-4 bg-blue-50 rounded-xl">
+        <div class="row-span-1 text-center">
             <form method="get" action="{% url 'item:browse' %}">
-                <input name="query" class="w-full px-6 py-4 border rounded-xl" type="text" value="{{query}}" placeholder="Find a bike, cloths, furninture etc.."/> 
-                <button class="mt-2 py-2 px-8 text-lg bg-teal-500 text-white rounded-xl">Search</button>
+                <input name="query" class="py-2 px-2 border rounded-xl" style="width: 700px;" type="text" value="{{query}}" placeholder="Search your favourite shoe"/> 
+                
             </form>
-
+            <button class="mt-2 py-2 px-8 text-lg bg-blue-500 text-white rounded-xl">Search</button>
             <hr class="my-6"/>
 
-            <p class="font-semibold">Categories</p>
+            <p class="font-bold">Purpose</p>
 
             <ul>
                 {% for category in categories %}
@@ -28,13 +28,13 @@
             <p class="font-semibold">Clear Filters</p>
             <ul>
                 <li>
-                    <a href="{% url 'item:browse' %}" class="mt-2 py-2 px-8 inline-block bg-rose-600 text-lg rounded-xl text-white">Clears</a>
+                    <a href="{% url 'item:browse' %}" class="mt-2 py-2 px-8 inline-block bg-rose-600 text-lg rounded-xl text-white">Clear</a>
                 </li>
             </ul>
             {% endif %}
         </div>
-        <div class="col-span-3">
-            <div class="grid grid-cols-3 gap-3">
+        <div class="row-span-3">
+            <div class="grid grid-cols-4 gap-3">
                 {% for item in items%}
                 <div>
                     <a href="{% url 'item:detail' item.id %}">
