--- a/eCom-master/core/templates/core/login.html
+++ b/eCom-master/core/templates/core/login.html
@@ -2,7 +2,7 @@
 {% block title %} login {% endblock %}
 
 {% block content %}
-<div class="w-1/2 my-6 mx-auto p-6 bg-gray-100 rounded-xl">
+<div class="w-1/2 my-6 mx-auto p-6  rounded-xl">
     <h1 class="mb-6 text-3xl">Login</h1>
     <form method="POST" action=".">
         {% csrf_token %}
@@ -23,7 +23,7 @@
                 {{form.non_field_errors }}
             </div>
         {% endif %}
-        <button class="py-3 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Login</button>
+        <button class="py-3 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl text-white">Login</button>
     </form>
     <p class="mt-6 font-semibold">Don't have account? <a href="{% url 'core:signup' %}" class="font-bold hover:text-green-800 text-green-700">Sign up</a> Now</p>
 </div>
