--- a/eCom-master/dashboard/templates/dashboard/dashboard.html
+++ b/eCom-master/dashboard/templates/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <div class="px-6 py-12 mt-6 bg-gray-100 rounded-xl">
+    <div class="px-6 py-12 mt-6 bg-blue-50 rounded-xl">
         <h2 class="mb-12 text-2xl text-center">My Items</h2>
         {% if items %}
         <div class="grid grid-cols-4 gap-3">
