--- a/eCom-master/core/templates/core/base.html
+++ b/eCom-master/core/templates/core/base.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>{% block title %} {% endblock title %} - eCommerce</title>
-  </head>
-  <body>
 
-    <nav class="px-8 py-4 flex justify-between items-center border-b bg-blue-50 border-blue-500">
-      <div class="space-x-6">
-        <a href="/" class="text-lg font-semibold hover:text-gray-500">Home</a>
-        {% if request.user.is_authenticated %}
-        <a href="{% url 'item:browse' %}" class="text-lg font-semibold hover:text-gray-500">Find</a>
-        <a href="{% url 'item:newitem' %}" class="text-lg font-semibold hover:text-gray-500">Sell</a>
-        {% endif %}
-      </div>
-      <div class="space-x-6">
-        <a href="/" class="text-xl text-center text-red-500 font-bold">Sneaker Complex</a>
-      </div>
-      <div class="space-x-6">
-        {% if request.user.is_authenticated %}
-        <a href="{% url 'dashboard:dashboard' %}" class="text-lg font-semibold hover:text-gray-500">Notifications</a>
-        <a href="{% url 'core:logout' %}" class="text-lg font-semibold hover:text-gray-500">Logout</a>
-        
-        {% else %}
-        <a href="{% url 'core:login' %}" class="text-lg font-semibold hover:text-gray-500">Login</a>
-        {% endif %}
-      </div>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>{% block title %} {% endblock title %} - eCommerce</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lumanosimo&display=swap" rel="stylesheet">
+</head>
 
-    <div class="px-6 py-6">
-      {% block content %} 
-      {% endblock content %}
+<body>
+
+  <nav class="grid gap-4 grid-cols-3 py-4 flex items-center border-b bg-blue-50 border-blue-500">
+    <div class="ml-8">
+      <a href="/" class="text-lg font-semibold hover:text-gray-500">Home</a>
+      {% if request.user.is_authenticated %}
+      <a href="{% url 'item:browse' %}" class="ml-2 text-lg font-semibold hover:text-gray-500">Find</a>
+      <a href="{% url 'item:newitem' %}" class="ml-2 text-lg font-semibold hover:text-gray-500">Sell</a>
+      {% endif %}
+    </div>
+    <div class="grid grid-cols-1">
+      <a href="/" class=" text-4xl text-center text-yellow-500 font-bold italic  antialiased hover:text-yellow-600 ">Sneaker Complex</a>
+    </div>
+    <div class="text-right mr-8">
+
+
+      {% if request.user.is_authenticated %}
+
+      <a href="{% url 'dashboard:dashboard' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Notifications</a>
+
+
+      <a href="{% url 'core:logout' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Logout</a>
+
+      {% else %}
+
+      <a href="{% url 'core:login' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Login</a>
+      {% endif %}
+
+      <a href="{% url 'core:contact' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Contact Us</a>
+    </div>
+  </nav>
+
+  <div class="px-6 py-6">
+    {% block content %}
+    {% endblock content %}
+  </div>
+
+  <footer class="text-center text-white" style="background-color: #6496c5;">
+    <div class="text-center p-3">
+
+      <p class="d-flex justify-content-center align-items-center">
+        Online complex to find your favourite sneakers!
+      </p>
     </div>
 
-    <footer class="px-6 py-6 flex justify-between bg-blue-50 border-b border-blue-500" >
-      <div class="w-2/3 pr-5">
-        <p class="text-lg text-slate-500">The online complex with all your favourite sneakers!</p>
-      </div>
+    <div class="text-center p-3" style="background-color: rgb(255, 0, 8);">
+      © 2024 Copyright:
+      <a class="text-white" href="/">Sneaker Complex</a>
+    </div>
 
-      <div class="w-1/3 pr-10">
-        <ul class="space-y-2">
-          <li><a href="#" class="text-lg text-black hover:text-slate-700">About</a></li>
-          <li><a href="{% url 'core:contact' %}" class="text-lg text-black hover:text-slate-700">Contact</a></li>
-          <li><a href="#" class="text-lg text-black hover:text-slate-700">Terms of use</a></li>
-        </ul>
-      </div>
-      
-    </footer>
-  </body>
+  </footer>
+</body>
+
 </html>
