--- a/eCom-master/core/templates/core/index.html
+++ b/eCom-master/core/templates/core/index.html
@@ -3,8 +3,8 @@
 
 
 {% block content %}
-    <div class="px-6 py-12 mt-6 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Newest Items</h2>
+    <div class="px-6 py-12 mt-6 bg-blue-50 rounded-xl">
+        <h2 class="mb-12 text-2xl text-center">Latest Sneakers</h2>
 
         <div class="grid grid-cols-4 gap-3">
             {% for item in items%}
@@ -23,20 +23,5 @@
         </div>
     </div>
 
-    <div class="px-6 py-12 mt-6 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Categories</h2>
-        <div class="grid grid-cols-3 gap-3">
-            {% for category in categories %}
-                <div>
-                    <a href="#">
-                        <div class="p-6 bg-white rounded-b-xl">
-                            <h2 class="text-2xl">{{category.name}}</h2>
-                            <p class="text-gray-500">{{category.items.count }}</p>
-                        </div>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
 
 {% endblock %}
