--- a/eCom-master/core/templates/core/signup.html
+++ b/eCom-master/core/templates/core/signup.html
@@ -2,7 +2,7 @@
 {% block title %} Sign up {% endblock %}
 
 {% block content %}
-<div class="w-1/2 my-6 mx-auto p-6 bg-gray-100 rounded-xl">
+<div class="w-1/2 my-6 mx-auto p-6 bg-blue-50 rounded-xl">
     <h1 class="mb-6 text-3xl">Sign Up</h1>
     <form method="POST" action=".">
         {% csrf_token %}
@@ -31,7 +31,7 @@
                 {{form.non_field_errors }}
             </div>
         {% endif %}
-        <button class="py-3 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Sign Up</button>
+        <button class="py-3 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl text-white">Sign Up</button>
     </form>
     <p class="mt-6 font-semibold">Already have account? <a href="{% url 'core:login' %}" class="font-bold hover:text-green-800 text-green-700">Login</a> Now</p>
 
