--- a/eCom-master/item/templates/item/detail.html
+++ b/eCom-master/item/templates/item/detail.html
@@ -7,7 +7,7 @@
         <img src="{{item.image.url }}" class="rounded-xl"/>
     </div>
 
-    <div class="col-span-2 p-6 bg-gray-100 rounded-xl">
+    <div class="col-span-2 p-6 bg-blue-50 rounded-xl">
         <h1 class="mb-6 text-3xl">{{ item.name }}</h1>
         <p class="text-gray-500"><strong>Price: </strong> ${{item.price}}</p>
         <p class="text-gray-500"><strong>Seller: </strong> {{item.created_by.username}}</p>
@@ -22,15 +22,15 @@
         {% if request.user == item.created_by %}
         <div class="mt-6 p-6 bg-white rounded-xl">
             <p>Manage my product</p>
-            <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Edit</a>
+            <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-blue-700">Edit</a>
             <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl hover:bg-red-700">Delete</a>
         </div>
         {% else %}
-            <a href="" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact Seller</a>
+            <a href="" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-blue-700">Buy Now</a>
         {% endif %}
     </div>
 </div>
-<div class="px-6 py-12 mt-6 bg-gray-100 rounded-xl">
+<div class="px-6 py-12 mt-6 bg-blue-50 rounded-xl">
     <h2 class="mb-12 text-2xl text-center">Related Items</h2>
 
     <div class="grid grid-cols-4 gap-3">
