--- a/eCom-master/core/templates/core/base.html
+++ b/eCom-master/core/templates/core/base.html
@@ -21,6 +21,7 @@
       <a href="{% url 'item:browse' %}" class="ml-2 text-lg font-semibold hover:text-gray-500">Find</a>
       <a href="{% url 'item:newitem' %}" class="ml-2 text-lg font-semibold hover:text-gray-500">Sell</a>
       {% endif %}
+      <a href="{% url 'core:contact' %}" class="ml-2 text-lg font-semibold hover:text-gray-500">Contact Us</a>
     </div>
     <div class="grid grid-cols-1">
       <a href="/" class=" text-4xl text-center text-yellow-500 font-bold italic  antialiased hover:text-yellow-600 ">Sneaker Complex</a>
@@ -32,7 +33,7 @@
 
       <a href="{% url 'dashboard:dashboard' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Notifications</a>
 
-
+      <a href="{% url 'core:changepassword' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Change Password</a>
       <a href="{% url 'core:logout' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Logout</a>
 
       {% else %}
@@ -40,7 +41,8 @@
       <a href="{% url 'core:login' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Login</a>
       {% endif %}
 
-      <a href="{% url 'core:contact' %}" class="mr-2 text-lg font-semibold hover:text-gray-500">Contact Us</a>
+      
+     
     </div>
   </nav>
 
