--- a/eCom-master/item/templates/item/buyitem.html
+++ b/eCom-master/item/templates/item/buyitem.html
@@ -17,7 +17,7 @@
                 {{form.non_field_errors }}
             </div>
         {% endif %}
-        <button class="mt-6 py-3 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl text-white">Submit</button>
+        <button class="mt-6 py-3 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl text-white">Confirm order</button>
 
     </form>
 </div>
