--- a/eCom-master/core/templates/core/signup.html
+++ b/eCom-master/core/templates/core/signup.html
@@ -4,10 +4,13 @@
 {% block content %}
 <div class="w-1/2 my-6 mx-auto p-6 bg-blue-50 rounded-xl">
     <h1 class="mb-6 text-3xl">Sign Up</h1>
+    <div class="p-6 bg-red-100 rounded-xl">
+        <p class="text-white-500"><strong>* Only alphanumeric characters, "." and "_" are allowed for username.</strong></p> 
+    </div>
     <form method="POST" action=".">
         {% csrf_token %}
         
-        <div class="mb-3">
+        <!-- <div class="mb-3">
             <label class="inline-block mb-2">Username</label> <br>
             {{form.username}}
         </div>
@@ -30,7 +33,8 @@
                 {% endfor%}
                 {{form.non_field_errors }}
             </div>
-        {% endif %}
+        {% endif %} -->
+        {{ form.as_p }}
         <button class="py-3 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl text-white">Sign Up</button>
     </form>
     <p class="mt-6 font-semibold">Already have account? <a href="{% url 'core:login' %}" class="font-bold hover:text-green-800 text-green-700">Login</a> Now</p>
