--- a/eCom-master/item/templates/item/buyitem.html
+++ b/eCom-master/item/templates/item/buyitem.html
@@ -3,20 +3,11 @@
 
 {% block content %}
 <div class="px-6 py-12 mt-6 bg-blue-50 rounded-xl">
-    <h2 class="mb-12 text-2xl text-center">{{title}}</h2>
-    <form method="post" action="." enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="space-y-4">
-            {{form.as_p}}
-        </div>
-        {% if form.errors or form.non_field_errors %}
-            <div class="mb-3 p-6 bg-red-100 rounded-xl">
-                {% for field in form %}
-                    {{field.errors}}
-                {% endfor%}
-                {{form.non_field_errors }}
-            </div>
-        {% endif %}
+    <h2 class="mb-12 text-2xl text-center">Payment Information</h2>
+    <form method="POST" action=".">
+            {% csrf_token %}
+            
+            {{ form.as_p }}
         <button class="mt-6 py-3 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl text-white">Confirm order</button>
 
     </form>
