--- a/eCom-master/item/templates/item/detail.html
+++ b/eCom-master/item/templates/item/detail.html
@@ -26,7 +26,7 @@
             <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl hover:bg-red-700">Delete</a>
         </div>
         {% else %}
-            <a href="" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-blue-700">Buy Now</a>
+            <a href="{% url 'item:buy' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-blue-700">Buy Now</a>
         {% endif %}
     </div>
 </div>
